--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=qcheck
+# 서버 포트
+server.port=8081
+
+# DB 연결 (MSSQL)
+#spring.datasource.url=jdbc:sqlserver://{ip}:1433;databaseName={DB명};encrypt=false;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=비밀번호
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+
+# DB 연결 (로컬)
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=${DB_NAME};encrypt=false;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# JPA 옵션
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
