Spring boot DB 변경(postgresql)

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,20 +1,33 @@
 # 서버 포트
 server.port=8081
 
-# DB 연결 (MSSQL)
-#spring.datasource.url=jdbc:sqlserver://{ip}:1433;databaseName={DB명};encrypt=false;trustServerCertificate=true
-#spring.datasource.username=sa
-#spring.datasource.password=비밀번호
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# ===========================================
+# 설정 변수 (여기서 값을 수정하세요)
+# ===========================================
+app.server.port=8081
+app.db.host=localhost
+app.db.port=5432
+app.db.name=qcheck
+app.db.username=postgres
+app.db.password=test
 
+# ===========================================
+# 서버 설정
+# ===========================================
+server.port=${app.server.port}
 
-# DB 연결 (로컬)
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=${DB_NAME};encrypt=false;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# ===========================================
+
+# DB 연결 (PostgreSQL)
++  # ===========================================
+spring.datasource.url=jdbc:postgresql://${app.db.host}:${app.db.port}/${app.db.name}
+spring.datasource.username=${app.db.username}
+spring.datasource.password=${app.db.password}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA 옵션
+# ===========================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# ===========================================
